--- a/index.html
+++ b/index.html
@@ -4,58 +4,96 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tareas en JavaScript</title>
+
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+    <style>
+        body {
+            background-color: #f4f4f9;
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+        }
+        .container {
+            margin-top: 20px;
+        }
+        .task {
+            background-color: #ffffff;
+            border: 2px solid #dedede;
+            border-radius: 10px;
+            padding: 20px;
+            margin-bottom: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2 {
+            color: #333333;
+        }
+        button {
+            background-color: #007bff;
+            color: #ffffff;
+            border: none;
+            border-radius: 5px;
+        }
+        button:hover {
+            background-color: #0056b3;
+        }
+        input {
+            border: 2px solid #dedede;
+            border-radius: 5px;
+        }
+        p {
+            font-weight: bold;
+            color: #0056b3;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">Tareas en JavaScript <br>Parcial 2</h1>
+        <h1 class="text-center my-4">Tareas en JavaScript</h1>
 
-        <div class="task card p-3 mb-4" id="task1">
+        <div class="task" id="task1">
             <h2>Tarea 1: Invertir una cadena</h2>
             <input type="text" class="form-control" id="inputString" placeholder="Ingrese una cadena">
-            <button class="btn btn-primary mt-2" onclick="invertirCadena()">Invertir Cadena</button>
+            <button class="btn mt-2" onclick="invertirCadena()">Invertir Cadena</button>
             <p id="result1" class="mt-2"></p>
         </div>
 
-        <div class="task card p-3 mb-4" id="task2">
+        <div class="task" id="task2">
             <h2>Tarea 2: Número primo</h2>
             <input type="number" class="form-control" id="inputNumber" placeholder="Ingrese un número">
-            <button class="btn btn-primary mt-2" onclick="esPrimo()">Verificar Primo</button>
+            <button class="btn mt-2" onclick="esPrimo()">Verificar Primo</button>
             <p id="result2" class="mt-2"></p>
         </div>
 
-        <div class="task card p-3 mb-4" id="task3">
+        <div class="task" id="task3">
             <h2>Tarea 3: Eliminar duplicados en un arreglo</h2>
             <input type="text" class="form-control" id="inputArray" placeholder="Ingrese un arreglo (ej: 1,2,3,4)">
-            <button class="btn btn-primary mt-2" onclick="eliminarDuplicados()">Eliminar Duplicados</button>
+            <button class="btn mt-2" onclick="eliminarDuplicados()">Eliminar Duplicados</button>
             <p id="result3" class="mt-2"></p>
         </div>
 
-        <div class="task card p-3 mb-4" id="task4">
+        <div class="task" id="task4">
             <h2>Tarea 4: Factorial de un número</h2>
             <input type="number" class="form-control" id="inputFactorial" placeholder="Ingrese un número">
-            <button class="btn btn-primary mt-2" onclick="calcularFactorial()">Calcular Factorial</button>
+            <button class="btn mt-2" onclick="calcularFactorial()">Calcular Factorial</button>
             <p id="result4" class="mt-2"></p>
         </div>
 
-        <div class="task card p-3 mb-4" id="task5">
+        <div class="task" id="task5">
             <h2>Tarea 5: Recuento de vocales</h2>
             <input type="text" class="form-control" id="inputVowels" placeholder="Ingrese una cadena">
-            <button class="btn btn-primary mt-2" onclick="contarVocales()">Contar Vocales</button>
+            <button class="btn mt-2" onclick="contarVocales()">Contar Vocales</button>
             <p id="result5" class="mt-2"></p>
         </div>
 
-        <div class="task card p-3 mb-4" id="task6">
+        <div class="task" id="task6">
             <h2>Tarea 6: Suma los números en un arreglo</h2>
             <input type="text" class="form-control" id="inputSumArray" placeholder="Ingrese un arreglo (ej: 1,2,3,4)">
-            <button class="btn btn-primary mt-2" onclick="sumarNumeros()">Sumar Números</button>
+            <button class="btn mt-2" onclick="sumarNumeros()">Sumar Números</button>
             <p id="result6" class="mt-2"></p>
         </div>
 
-        <div class="task card p-3 mb-4" id="task7">
+        <div class="task" id="task7">
             <h2>Tarea 7: Encontrar el máximo en un arreglo</h2>
             <input type="text" class="form-control" id="inputMaxArray" placeholder="Ingrese un arreglo (ej: 1,2,3,4)">
-            <button class="btn btn-primary mt-2" onclick="encontrarMaximo()">Encontrar Máximo</button>
+            <button class="btn mt-2" onclick="encontrarMaximo()">Encontrar Máximo</button>
             <p id="result7" class="mt-2"></p>
         </div>
     </div>
