--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="text-center my-4">Tareas en JavaScript</h1>
+        <h1 class="text-center my-4">Tareas en JavaScript<br>Parcial 2</h1>
 
         <div class="task" id="task1">
             <h2>Tarea 1: Invertir una cadena</h2>
